# gm82test

./: .gitignore  CMakeLists.txt  README.md  build.bat  desktop.ini  gm82liveroom.gej  gm82liveroom.gml  gm82liveroom_stub.gej  gm82test.gej  gm82test.gml  gm82test_stub.gej  gm82test_stub.gml  inst_meta.c  johnny.cfg
.github/workflows/: build-gex.yml  cmake.yml
test.gm82/: live room test.gm82
test.gm82/objects/: object0.gml
test.gm82/settings/: extensions.txt
